--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["caffee", "Dela", "Frappuccino", "Samirah"]
+  "cSpell.words": [
+    "caffee",
+    "Dela",
+    "Frappuccino",
+    "Isagani",
+    "matcha",
+    "Roni",
+    "Samirah"
+  ]
 }
